--- a/build.yaml
+++ b/build.yaml
@@ -22,4 +22,4 @@ include:
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: seeeduino_xiao_ble
-    shield: settings_resetf
+    shield: settings_reset
