--- a/config/west.yml
+++ b/config/west.yml
@@ -26,6 +26,8 @@ manifest:
       url-base: https://github.com/urob
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: carrefinho
+      url-base: https://github.com/carrefinho   
 
   projects:
     - name: zmk
