--- a/config/totem.conf
+++ b/config/totem.conf
@@ -4,4 +4,15 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-CONFIG_ZMK_POINTING=y        # 필수, 여기까지 기존 토템 펌웨어 부
+
+# Set sleep timeout to 30min (30*60*1000ms)
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# Enable mouse
+CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
+
+# Combo config, automated by build script
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
+CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=3
