--- a/config/leader.dtsi
+++ b/config/leader.dtsi
@@ -14,13 +14,13 @@
         }; \
     };
 
-/* German umlauts */ 용도폐기
+/* German umlauts 용도폐기
 ZMK_LEADER_SEQUENCE(de_ae,      &de_ae,         A)  // ä
 ZMK_LEADER_SEQUENCE(de_oe,      &de_oe,         O)  // ö
 ZMK_LEADER_SEQUENCE(de_ue,      &de_ue,         U)  // ü
 ZMK_LEADER_SEQUENCE(de_eszett,  &de_eszett,     S)  // ß
 
-/* Greek letters */
+/* Greek letters
 ZMK_LEADER_SEQUENCE(el_alpha,   &el_alpha,      E A)  // α
 ZMK_LEADER_SEQUENCE(el_beta,    &el_beta,       E B)  // β
 ZMK_LEADER_SEQUENCE(el_gamma,   &el_gamma,      E G)  // γ
